About Section Ready

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,12 @@
     .btn {
         @apply uppercase rounded-md px-5 py-2 bg-cyan-600 text-white hover:bg-white hover:text-cyan-600 duration-500 ease-linear border-2 border-cyan-700
     }
+
   }
+  
+.imgabout {
+  border-radius: 89% 11% 90% 10% / 45% 58% 42% 55% 
+}
 
 
 
